Fix BUG: If text input is too long it overwrites the "👍" and "⚠️" icons

--- a/styles/style.css
+++ b/styles/style.css
@@ -175,12 +175,13 @@ input {
   border: #e5e7eb 1px solid;
   border-radius: 4px;
   padding: 2px;
+  padding-right: 14%;
 }
 
 .error-phone,
 .error-password {
   display: none;
-  margin-top: 1px;
+  margin-top: 1.2px;
 }
 
 input,
@@ -195,7 +196,7 @@ input:focus {
 
 input:not(:focus):not(:placeholder-shown):valid,
 .matching {
-  background: url("https://assets.digitalocean.com/labs/icons/hand-thumbs-up.svg")
+  background: url("/images/hand-thumbs-up.svg")
     no-repeat 95% 50%;
   background-color: var(--clr-neutral-100);
 }
@@ -207,7 +208,7 @@ input:not(:focus):not(:placeholder-shown):invalid ~ .error-phone {
 
 input:not(:focus):not(:placeholder-shown):invalid,
 .not-matching {
-  background: url("https://assets.digitalocean.com/labs/icons/exclamation-triangle-fill.svg")
+  background: url("/images/exclamation-triangle-fill.svg")
     no-repeat 95% 50% !important;
   outline: var(--clr-accent-700) 1px solid;
   background-color: var(--clr-neutral-100);
